--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,8 @@
 /build/ESEventPush/xref-ESEventPush.html
 /build/ESEvents/xref-ESEvents.html
 /.idea/.gitignore
+/Pillow-6.2.2-cp38-cp38-win32.whl
+/ESEventsScrapSystems.py
+/ESEventsScrapTopper.py
+/ESEventsScrapSystems.spec
+/ESEventsScrapTopper.spec
