Normalization in /plugins/MarqueeManager/

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,9 @@
 /ESEventsScrapTopper.py
 /ESEventsScrapSystems.spec
 /ESEventsScrapTopper.spec
+/dist/StartRetrobatMarquees.bat.bak
+/dist/StartRetrobatMarqueesAS.bat.bak
+/ESRetroAchievementsSystems.spec
+/ESRetroAchievementSystems.spec
+/dist/ESRetroAchievements.spec
+/ESRetroAchievements.spec
