Update ESEvents Dynamic Marquee Compose

--- a/.RetroBatInstaller/plugins/MarqueeManager/config.ini
+++ b/.RetroBatInstaller/plugins/MarqueeManager/config.ini
@@ -7,7 +7,8 @@ MarqueeBackgroundColor = Black
 MarqueeBackgroundCodeColor = #000000
 MarqueeWhiteTextAlternativNameSuffix = -w
 MarqueeAutoConvert = false
-MarqueeAutoGeneration = true
+MarqueeAutoGeneration = false
+MarqueeCompose = true
 MarqueeRetroAchievements = false
 MarqueePinballDMD = false
 MarqueeAutoScraping = false
@@ -64,3 +65,4 @@ system-selected = echo loadfile "{marquee_file}" replace>{IPCChannel}
 game-select = echo loadfile "{marquee_file}" replace>{IPCChannel}
 game-selected = echo loadfile "{marquee_file}" replace>{IPCChannel}
 game-forceupdate = echo loadfile "{marquee_file}" replace>{IPCChannel}
+marquee-commpose = echo {"command":["script-message","change-img","{data}"]}>{IPCChannel}
