--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,6 @@
 /ESRetroAchievementSystems.spec
 /dist/ESRetroAchievements.spec
 /ESRetroAchievements.spec
+/dmd.spec
+/SUPERMODELListenerWS.spec
+/MAMEListenerWS.spec
