Update RetroBat Installer

--- a/.RetroBatInstaller/plugins/MarqueeManager/config.ini
+++ b/.RetroBatInstaller/plugins/MarqueeManager/config.ini
@@ -1,19 +1,27 @@
 [Settings]
-Language = fr
+Language = en
+# Change here Marquee Width and Marquee Height if real DMD to width to 128 and height to 32 for example
 MarqueeWidth = 1920
 MarqueeHeight = 360
 MarqueeBorder = 0
 MarqueeBackgroundColor = Black
 MarqueeBackgroundCodeColor = #000000
 MarqueeWhiteTextAlternativNameSuffix = -w
-MarqueeAutoConvert = false
-MarqueeAutoGeneration = false
-MarqueeCompose = true
+# If real DMD MarqueeCompose MarqueePinballDMD Marquee Auto Convert to false
+MarqueeAutoConvert = true
+MarqueeAutoGeneration = true
+MarqueeCompose = false
+MarqueeMameOutput = true
+MarqueeSupermodelOutput = true
 MarqueeRetroAchievements = false
 MarqueePinballDMD = false
 MarqueeAutoScraping = false
 MarqueeAutoScrapingDebug = false
-AcceptedFormats = mp4, jpg, png
+# Active here if real DMD with Active DMD to true
+ActiveDMD = false
+ActiveSystemsDMD = fpinball, pinballfx, pinballfx2, pinballfx3, pinballfm, vpinball, zaccariapinball
+ESCloseAllIfStop = true
+AcceptedFormats = mp4, gif, jpg, png
 #RetroBatPath = C:\RetroBat\
 #RomsPath = C:\RetroBat\roms\
 #DefaultImagePath = C:\RetroBat\plugins\MarqueeManager\images\default.png
@@ -30,6 +38,7 @@ CollectionFilePath = auto-{collection_name}
 CollectionAlternativNames = custom-, arcade
 CollectionCorrelation = recent:lastplayed, all:allgames, 2players:at2players, 4players:at4players, collections:custom-collections
 IPCChannel = \\.\pipe\mpv-pipe
+IPCChannelDMD = \\.\pipe\dmd-pipe
 ScreenNumber = 2
 #MPVPath = C:\RetroBat\plugins\MarqueeManager\mpv\mpv.exe
 MPVLaunchCommand = "{MPVPath}" "{DefaultImagePath}" --script=ra.lua --no-taskbar-progress --input-gamepad=yes --no-osc --loop-file=inf --alpha=yes --no-audio --no-input-cursor --no-input-default-bindings --idle --player-operation-mode=pseudo-gui --fs --fs-screen={ScreenNumber} --background={MarqueeBackgroundCodeColor} --screen={ScreenNumber} --keep-open=yes --input-ipc-server={IPCChannel}
@@ -66,3 +75,5 @@ game-select = echo loadfile "{marquee_file}" replace>{IPCChannel}
 game-selected = echo loadfile "{marquee_file}" replace>{IPCChannel}
 game-forceupdate = echo loadfile "{marquee_file}" replace>{IPCChannel}
 marquee-commpose = echo {"command":["script-message","change-img","{data}"]}>{IPCChannel}
+marquee-pushtodmd = echo {"command":["script-message","pushtodmd-img","{data}"]}>{IPCChannel}
+marquee-mame = echo {"command":["script-message","mame-action","{data}"]}>{IPCChannel}
